fixed text card size in browse

--- a/src/app/browse/browse.css
+++ b/src/app/browse/browse.css
@@ -140,6 +140,8 @@
   opacity: 0.8;
   font-size: 0.9rem;
   margin-bottom: 0.8rem;
+  height: 60px;
+  overflow: hidden;
 }
 
 .tags {
@@ -159,6 +161,7 @@
 
 /* LIKE BUTTON */
 .actions {
+  
   display: flex;
   justify-content: flex-end;
 }
